<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goel.akshay.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/question_1_edit"
            style="@style/editViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_1_hint" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_2" />

        <EditText
            android:id="@+id/question_2_edit"
            style="@style/editViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_2_hint" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_3" />

        <EditText
            android:id="@+id/question_3_edit"
            style="@style/editViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_3_hint" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/question_4_edit"
            style="@style/editViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_4_hint" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/question_5_edit"
            style="@style/editViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_5_hint" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/submitBtnColor"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>


</ScrollView>